--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "license" : "MIT",
   "repository" : "emuls/basic-node-server",
   "dependencies" : {
-    "express" : "4.13.3"
+    "express" : "4.13.3",
+    "grunt" : "latest",
+    "grunt-ng-annotate" : "1.0.1",
+    "grunt-contrib-uglify" : "0.11.0",
+    "grunt-contrib-less" : "1.1.0",
+    "grunt-contrib-watch" : "0.6.1",
+    "grunt-contrib-concat" : "0.5.1",
+    "grunt-contrib-copy" : "0.8.2",
+    "grunt-contrib-clean" : "0.7.0"
   }
 }
