--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "dependencies" : {
     "express" : "4.13.3",
     "grunt" : "latest",
-    "grunt-ng-annotate" : "1.0.1",
-    "grunt-contrib-uglify" : "0.11.0",
     "grunt-contrib-less" : "1.1.0",
     "grunt-contrib-watch" : "0.6.1",
     "grunt-contrib-concat" : "0.5.1",
     "grunt-contrib-copy" : "0.8.2",
-    "grunt-contrib-clean" : "0.7.0"
+    "grunt-contrib-clean" : "0.7.0",
+    "grunt-systemjs-builder": "0.2.5"
   }
 }
