--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-contrib-concat" : "0.5.1",
     "grunt-contrib-copy" : "0.8.2",
     "grunt-contrib-clean" : "0.7.0",
-    "grunt-systemjs-builder": "0.2.5"
+    "grunt-systemjs-builder": "0.2.5",
+    "grunt-contrib-requirejs" : "0.4.4"
   }
 }
